# fhtml

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
fhtml/: Cargo.toml
fhtml-core/: Cargo.toml
fhtml-core/src/: lib.rs
fhtml-macros/: Cargo.toml
fhtml-macros/src/: ast.rs  display.rs  entity.rs  expand.rs  fmt.rs  hash.rs  html.rs  lib.rs  lower_ast.rs  parse.rs  parser.rs  segment.rs
fhtml/src/: alloc.rs  lib.rs  runtime.rs
fhtml/tests/: basic_syntax.rs  const_format.rs  format.rs  formatcp.rs  write.rs
macros/: Cargo.toml
macros/src/: analyze.rs  ast.rs  fmt.rs  lib.rs  lower_ast.rs  parse.rs
src/: lib.rs
