[package]
name = "fhtml"
edition = "2021"
version.workspace = true
authors = ["Jonah Lund <jonahlund@proton.me>"]
description = "Formatting macros tailored for HTML"
homepage = "https://github.com/JonahLund/fhtml"
repository = "https://github.com/JonahLund/fhtml"
readme = "../README.md"
keywords = ["html", "macro", "template", "formatting"]
categories = ["template-engine", "value-formatting", "web-programming"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
const_format = ["dep:const_format"]

[dependencies]
fhtml-macros = { version = "0.2", path = "../fhtml-macros" }
const_format = { version = "0.2", optional = true }
