[package]
name = "fhtml"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
const = ["dep:const_format"]

[dependencies]
fhtml-macros = { version = "0.4", path = "../fhtml-macros" }
const_format = { version = "0.2", optional = true }
