[package]
name = "fhtml-macros"
version = "0.6.1"
edition = "2021"
authors = ["Jonah Lund <jonahlund@proton.me>"]
description = "Macro implementations for `fhtml`"
repository = "https://github.com/JonahLund/fhtml"
license = "MIT"
rust-version = "1.71"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
